...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Home-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController title="Home" id="BYZ-38-t0r" customClass="StartViewController" customModule="HouseProducts" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e79-3H-HnF">
                                <rect key="frame" x="156" y="309.5" width="62" height="48"/>
                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                <state key="normal" title="Start"/>
                                <connections>
                                    <action selector="buttonClickStart:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gGf-Mz-EEk"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
            </objects>
            <point key="canvasLocation" x="1056.8" y="117.39130434782609"/>
        </scene>
        <!--Select-->
        <scene sceneID="zbj-Ia-0tB">
            <objects>
                <viewController title="Select" id="Y0g-WL-N8j" customClass="ProductSelectViewController" customModule="HouseProducts" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="qJb-aH-dWF">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rjV-kR-Apc">
                                <rect key="frame" x="0.0" y="603" width="375" height="64"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X0W-JB-uz4">
                                        <rect key="frame" x="259" y="17" width="100" height="30"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="bfM-DS-rvt"/>
                                        </constraints>
                                        <state key="normal" title="Review"/>
                                        <connections>
                                            <action selector="buttonClickReview:" destination="Y0g-WL-N8j" eventType="touchUpInside" id="E5U-4Z-uQB"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" red="0.0" green="0.47843137254901957" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        <rect key="frame" x="87.5" y="8.5" width="200" height="29"/>
                                        <color key="backgroundColor" red="0.3529411764705882" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="cnF-Bo-MKa"/>
                                        </constraints>
                                        <segments>
                                            <segment title="List View"/>
                                            <segment title="Grid View"/>
                                        </segments>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <connections>
                                            <action selector="indexChanged:" destination="YTZ-O1-0lU" eventType="valueChanged" id="Wi8-FI-xlm"/>
                                        </connections>
                                    </segmentedControl>
...
